--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <meta http-equiv="expires" content="-1" />
     <title>Газпромбанк</title>
     <script src="settings.js"></script>
-    <script type="module" crossorigin src="assets/gpb-fns.1cc41912.js"></script>
-    <link rel="stylesheet" href="assets/gpb-fns.45a2d587.css">
+    <script src="https://pay.google.com/gp/p/js/pay.js"></script>
+    <script src="https://applepay.cdn-apple.com/jsapi/v1/apple-pay-sdk.js"></script>
+    <script type="module" crossorigin src="assets/gpb-new.9481ec94.js"></script>
+    <link rel="stylesheet" href="assets/gpb-new.78c68036.css">
   </head>
 
   <body>
